--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
     <uses-permission android:name="android.permission.NEARBY_WIFI_DEVICES" />
 
     <application
+        android:name=".MainApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -27,13 +28,13 @@
         android:theme="@style/Theme.DrawSync"
         tools:targetApi="31">
         <activity
-            android:name=".ReceiveActivity"
+            android:name=".ui.activity.ReceiveActivity"
             android:exported="false" />
         <activity
-            android:name=".ConnectActivity"
+            android:name=".ui.activity.ConnectActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.activity.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
